--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "http://www.phdane.com/"
+url: http://www.phdane.com/
 
 github:
   username: PhDane # change to your GitHub username
@@ -34,12 +34,12 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: "PhDane"
-  email: "thephdane@gmail.com" # change to your email address
+  name: PhDane
+  email: thephdane@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # https://twitter.com/username # change to your Twitter homepage
-    "https://github.com/phdane" # change to your GitHub homepage
+    https://github.com/phdane # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     https://www.linkedin.com/in/daneocannon/ #change to your LinkedIn page
