--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ social:
     https://github.com/phdane # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    https://www.linkedin.com/in/daneocannon/ #change to your LinkedIn page
+    https://www.linkedin.com/in/daneocannon #change to your LinkedIn page
 
 # Site Verification Settings
 webmaster_verifications:
