--- a/_config.yml
+++ b/_config.yml
@@ -39,10 +39,10 @@ social:
   links:
     # The first element serves as the copyright owner's link
     # https://twitter.com/username # change to your Twitter homepage
-    https://github.com/phdane # change to your GitHub homepage
+    # https://github.com/phdane # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    https://www.linkedin.com/in/daneocannon #change to your LinkedIn page
+    # https://www.linkedin.com/in/daneocannon #change to your LinkedIn page
 
 # Site Verification Settings
 webmaster_verifications:
